@@ -2,12 +2,11 @@ package org.example.java8;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class Java8Basic {
     public void method1SumOfAllNumber(){
-      int number[] = {1, 2, 3, 4, 5};
+      int[] number = {1, 2, 3, 4, 5};
       int sum=Arrays.stream(number).sum();
       System.out.println("Sum of all number is: "+sum);
     }
@@ -25,9 +24,9 @@ public class Java8Basic {
     }
 
     public void evenAndOddNumber(){
-        int arr[]={1,2,3,4,5,6,7,8,9};
-       List<Integer> odd= Arrays.stream(arr).filter(n->n%2==0).collect(Collectors.toList());
-        List<Integer> even= Arrays.stream(arr).filter(n->n%2!=0).collect(Collectors.toList());
+        int[] arr={1,2,3,4,5,6,7,8,9};
+       List<Integer> odd= Arrays.stream(arr).filter(n->n%2==0).boxed().toList();
+        List<Integer> even= Arrays.stream(arr).filter(n->n%2!=0).boxed().toList();
         System.out.println("Even number is: "+even);
         System.out.println("Odd number is: "+odd);
 
